2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_size_allocate_cb): Wrapped in a
	GTK_WIDGET_MAPPED block so we don't send irrelevant values.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c: Connected to size-allocate to send the resized
	signal. This ensures the terminal is properly sized. Added old-width
	and old-height properties.
	* src/mud-window.c: Changed to size-allocate for the resized signal as
	in mud-subwindow.c. This fixes gnome-mud sending stale naws values.
	* src/zmp/zmp-subwindow.c: Now checks against MudSubwindows old-width
	and old-height values to ensure subwindow.size is only sent once at
	the proper times.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_constructor): Sets the window
	width and height again after the profile read as it might have
	changed.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_open): Now explicity sends
	the window size rather than relying on the callback on window open.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_set_property),
	(mud_subwindow_set_terminal_font): Removed debug logging. Now updates
	VTE grid when font is changed.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_open): Now displays the
	window before attempting to resize.  This allows the vte terminal to
	resize properly.

2009-03-17  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Added mud-subwindow.[ch]
	* src/mud-subwindow.[ch]: New files which implement a sub-output
	window.
	* src/gnome-mud-marshallers.list: Added VOID:UINT,UINT
	* src/handlers/mud-telnet-zmp.c: Added property for ZmpMain.
	* src/mud-connection-view.[ch]: Added api which creates and manages
	subwindows.
	* src/zmp/zmp-core.c: Added property to parent MudTelnetZMP
	* src/zmp/zmp-main.[ch]: Added zmp_main_get_package_by_name
	* src/zmp/zmp-package-interface.c: Added parent MudTelnetZMP property.